--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
+  "name": "app",
+  "module": "server/index.ts",
+  "type": "module",
   "scripts": {
+    "start": "bun server/index.ts",
     "dev": "bun --watch server/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
     
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.11",
